--- a/pruebas_flexbox/flexbox.html
+++ b/pruebas_flexbox/flexbox.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pruebas Flexbox</title>
+</head>
+<body>
+    <div>
+        <div id="one">One</div>
+        <div id="two">Two</div>
+        <div id="three">Three</div>
+        <div id="four">Four</div>
+        <div id="five">Five</div>
+    </div>
+</body>
+</html>
