--- a/pruebas_flexbox/flexbox.html
+++ b/pruebas_flexbox/flexbox.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="flexbox_style/style.css">
     <title>Pruebas Flexbox</title>
 </head>
 <body>
-    <div>
-        <div id="one">One</div>
-        <div id="two">Two</div>
-        <div id="three">Three</div>
-        <div id="four">Four</div>
-        <div id="five">Five</div>
+    <div class="container">
+        <div class="box" id="one">One</div>
+        <div class="box" id="two">Two</div>
+        <div class="box" id="three">Three</div>
+        <div class="box" id="four">Four</div>
+        <div class="box" id="five">Five</div>
     </div>
 </body>
 </html>
