--- a/Ejercicio2_2122/maqueta.html
+++ b/Ejercicio2_2122/maqueta.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,62 +10,68 @@
     <script src="scripts/jquery-3.5.0.js"></script>
     <script src="scripts/canvas.js"></script>
 </head>
+
 <body>
     <!-- Cabecera-->
     <header>
         <img src="imágenes/logotipo.png" alt="Logotipo de la Junta de Andalucía">
         <p>Darío Jesús Ramírez Romero</p>
     </header>
-	
+
     <!-- Zona reservada para insertar la imagen tratada-->
     <div class="zona z_imagen">
         <h2>ZONA DE IMAGEN</h2>
-		<img class="imagen_ejercicio" src="imágenes/img_resultado.jpg" alt="Surfista bajo el agua">
+        <img class="imagen_ejercicio" src="imágenes/img_resultado.jpg" alt="Surfista bajo el agua">
     </div>
 
-	<!-- Zona reservada para insertar el video suministrado y el objeto canvas -->
+    <!-- Zona reservada para insertar el video suministrado y el objeto canvas -->
     <div class="zona z_video">
         <h2>ZONA DE VIDEO</h2>
-       <!-- Insertar etiquetas necesarias para que el video se visualice correctamente -->
-        <video id="video" height="230px" controls>
-            <source src="vídeos/video_animacion.mp4" type="video/mp4">
-        </video>
-       <!-- Insertar etiquetas necesarias para que el objeto canvas se visualice correctamente -->
-       <canvas id="canvas_inicio"></canvas>
+        <div id="video_mas_canvas">
+            <!-- Insertar etiquetas necesarias para que el video se visualice correctamente -->
+            <video id="video" height="230px" controls>
+                <source src="vídeos/video_animacion.mp4" type="video/mp4">
+            </video>
+            <!-- Insertar etiquetas necesarias para que el objeto canvas se visualice correctamente -->
+            <canvas id="canvas_inicio"></canvas>
+        </div>
     </div>
 
-	<!-- Zona reservada para crear la animación -->
+    <!-- Zona reservada para crear la animación -->
     <div class="zona z_animacion">
         <h2>ZONA DE ANIMACIÓN</h2>
         <div id="objeto_animado"></div>
     </div>
 
-	<!-- Zona reservada para crear el ejercicio de jquery -->
+    <!-- Zona reservada para crear el ejercicio de jquery -->
     <div class="zona z_jquery">
         <h2>ZONA DE JQUERY</h2>
         <div class="elementos_jquery">
-			<div>
-                
+            <div>
+
                 <h3>Opciones para aplicar a la imagen situada en ZONA DE IMAGEN</h3>
-				<!-- Opciones que tendrán que ejecutar código jQuery cuando se haga click sobre ellas-->
+                <!-- Opciones que tendrán que ejecutar código jQuery cuando se haga click sobre ellas-->
                 <ul>
-					<li id="opcion1">Opción 1: Poner borde azul con un grosor de 10px.</li>
-					<li id="opcion2">Opción 2: Aplicar a la imagen un filtro gris con valor 100%.</li>
-					<li id="opcion3">Opción 3: Cambiar las dimensiones de la imagen dejándola con 150px de ancho por 100px de alto.</li>
-					<li id="opcion4">Opción 4: Hacer desaparecer con un efecto fadeOut la imagen y que aparezca con un filtro invertido al 100% y efecto fadeIn.</li>
-				</ul>
-			</div>
-			<div>
-				<!-- Zona de histórico -->
-                <h3>Histórico</h3>
-				<p id="cambios_aplicados"></p>
+                    <li id="opcion1">Opción 1: Poner borde azul con un grosor de 10px.</li>
+                    <li id="opcion2">Opción 2: Aplicar a la imagen un filtro gris con valor 100%.</li>
+                    <li id="opcion3">Opción 3: Cambiar las dimensiones de la imagen dejándola con 150px de ancho por
+                        100px de alto.</li>
+                    <li id="opcion4">Opción 4: Hacer desaparecer con un efecto fadeOut la imagen y que aparezca con un
+                        filtro invertido al 100% y efecto fadeIn.</li>
+                </ul>
             </div>
-		</div>    
-	</div>    
+            <div>
+                <!-- Zona de histórico -->
+                <h3>Histórico</h3>
+                <p id="cambios_aplicados"></p>
+            </div>
+        </div>
+    </div>
 
     <!-- Pie de página -->
     <footer>
-        <h2>Pie de página (transición). Indica localidad del examen</h2>
+        <h2>Málaga</h2>
     </footer>
 </body>
+
 </html>
